fix(feature-section): stretch image to fill if needed

--- a/packages/styles/scss/components/feature-section/_feature-section.scss
+++ b/packages/styles/scss/components/feature-section/_feature-section.scss
@@ -120,6 +120,7 @@
     padding-inline: 0;
 
     ::slotted(#{$c4d-prefix}-image) {
+      height: 100%;
       overflow: hidden;
 
       @include breakpoint(sm) {
